--- a/gleam.toml
+++ b/gleam.toml
@@ -6,21 +6,21 @@ version = "1.0.0"
 #
 # description = ""
 # licences = ["Apache-2.0"]
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
+# repository = { type = "github", user = "", repo = "" }
+# links = [{ title = "Website", href = "" }]
 #
 # For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/. 
+# https://gleam.run/writing-gleam/gleam-toml/.
 
 [dependencies]
-gleam_stdlib = "~> 0.34 or ~> 1.0"
-wisp = "~> 0.14"
-gleam_erlang = "~> 0.25"
-mist = "~> 1.0"
-dot_env = "~> 0.5"
-lustre = "~> 4.1"
-gleam_json = ">= 1.0.0 and < 2.0.0"
-gleam_http = ">= 3.6.0 and < 4.0.0"
+gleam_stdlib = ">= 0.34.0 and < 2.0.0"
+wisp = ">= 1.5.1 and < 2.0.0"
+lustre = ">= 4.6.3 and < 5.0.0"
+mist = ">= 4.0.4 and < 5.0.0"
+gleam_http = ">= 3.7.2 and < 4.0.0"
+gleam_erlang = ">= 0.33.0 and < 1.0.0"
+dot_env = ">= 1.2.0 and < 2.0.0"
+gleam_json = ">= 2.2.0 and < 3.0.0"
 
 [dev-dependencies]
-gleeunit = "~> 1.0"
+gleeunit = ">= 1.0.0 and < 2.0.0"
