--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,7 @@ gleam_http = ">= 3.7.2 and < 4.0.0"
 gleam_erlang = ">= 0.33.0 and < 1.0.0"
 dot_env = ">= 1.2.0 and < 2.0.0"
 gleam_json = ">= 2.2.0 and < 3.0.0"
+pog = ">= 3.1.1 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
