--- a/gleam.toml
+++ b/gleam.toml
@@ -25,3 +25,4 @@ gleam_json = ">= 2.2.0 and < 3.0.0"
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
 cigogne = ">= 2.0.1 and < 3.0.0"
+squirrel = ">= 2.1.0 and < 3.0.0"
