--- a/gleam.toml
+++ b/gleam.toml
@@ -13,14 +13,15 @@ version = "1.0.0"
 # https://gleam.run/writing-gleam/gleam-toml/.
 
 [dependencies]
-gleam_stdlib = ">= 0.34.0 and < 2.0.0"
-wisp = ">= 1.5.1 and < 2.0.0"
+dot_env = ">= 1.2.0 and < 2.0.0"
+gleam_erlang = ">= 0.33.0 and < 1.0.0"
+gleam_http = ">= 3.7.2 and < 4.0.0"
+gleam_json = ">= 2.2.0 and < 3.0.0"
+gleam_stdlib = ">= 0.43.0 and < 2.0.0"
 lustre = ">= 4.6.3 and < 5.0.0"
 mist = ">= 4.0.4 and < 5.0.0"
-gleam_http = ">= 3.7.2 and < 4.0.0"
-gleam_erlang = ">= 0.33.0 and < 1.0.0"
-dot_env = ">= 1.2.0 and < 2.0.0"
-gleam_json = ">= 2.2.0 and < 3.0.0"
+wisp = ">= 1.5.1 and < 2.0.0"
+gtempo = { git = "git@github.com:ToddG/tempo.git", ref = "main" }
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
