--- a/gleam.toml
+++ b/gleam.toml
@@ -25,6 +25,7 @@ youid = ">= 1.5.1 and < 2.0.0"
 pog = ">= 4.1.0 and < 5.0.0"
 envoy = ">= 1.0.2 and < 2.0.0"
 gleam_otp = ">= 1.0.0 and < 2.0.0"
+logging = ">= 1.3.0 and < 2.0.0"
 
 [dev-dependencies]
 cigogne = ">= 4.0.1 and < 5.0.0"
